--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,18 @@
     <div class="app">
         <h1 id="counterValue">0</h1>
         <button id="increment">+1</button>
+        <button id="decrement">-1</button>
+        <button id="increment5">+5</button>
+        <button id="decrement5">-5</button>
+        <select id="color">
+            <option value="Red">Red</option>
+            <option value="Blue">Blue</option>
+            <option value="Green">Green</option>
+        </select>
+        <input type="text" id="number">
+        <button id="numberSubmit">Change the number</button>
     </div>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.min.js"></script>
     <script src="reducer.js"></script>
     <script src="render.js"></script>
